--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -75,3 +75,21 @@
  edition = {1st},
  publisher = {The MIT Press},
 } 
+
+@inproceedings{Afshari:2012:LPP:2384592.2384595,
+ author = {Afshari, Mehrdad and Barr, Earl T. and Su, Zhendong},
+ title = {Liberating the Programmer with Prorogued Programming},
+ booktitle = {Proceedings of the ACM International Symposium on New Ideas, New Paradigms, and Reflections on Programming and Software},
+ series = {Onward! 2012},
+ year = {2012},
+ isbn = {978-1-4503-1562-3},
+ location = {Tucson, Arizona, USA},
+ pages = {11--26},
+ numpages = {16},
+ url = {http://doi.acm.org/10.1145/2384592.2384595},
+ doi = {10.1145/2384592.2384595},
+ acmid = {2384595},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {executable refinement, human computation, hybrid computation, managing concerns, prorogued programming, workflow improvement},
+} 
