--- a/docs/report.tex
+++ b/docs/report.tex
@@ -900,8 +900,10 @@ functional style.
 The type inference system is compliant with \textit{System F}. While this is not the most demanding
 of type environments within which to work, it might still be too rigid for students with no
 programming experience at all, and represent a barrier to entry. Future work might examine the
-possibility of \textit{delaying}, or proroguing\footnote{Afshari, Barr, Su} type checking until the student has fleshed out an
-approximate solution to a problem. Type-checking then
+possibility of \textit{delaying}, or proroguing type checking until the student has fleshed out an
+approximate solution to a problem\cite{Afshari:2012:LPP:2384592.2384595}. Type-checking then
+becoming an interactive tool for improving software, rather than an overly tight straitjacket it can
+seem for those not used to moving within such constraints
 
 \chapter{Bibliography}
 \bibliography{bibliography}{}
