--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -93,3 +93,23 @@
  address = {New York, NY, USA},
  keywords = {executable refinement, human computation, hybrid computation, managing concerns, prorogued programming, workflow improvement},
 } 
+
+@article{Tofte:2004:RRM:993034.993040,
+ author = {Tofte, Mads and Birkedal, Lars and Elsman, Martin and Hallenberg, Niels},
+ title = {A Retrospective on Region-Based Memory Management},
+ journal = {Higher Order Symbol. Comput.},
+ issue_date = {September 2004},
+ volume = {17},
+ number = {3},
+ month = sep,
+ year = {2004},
+ issn = {1388-3690},
+ pages = {245--265},
+ numpages = {21},
+ url = {http://dx.doi.org/10.1023/B:LISP.0000029446.78563.a4},
+ doi = {10.1023/B:LISP.0000029446.78563.a4},
+ acmid = {993040},
+ publisher = {Kluwer Academic Publishers},
+ address = {Hingham, MA, USA},
+ keywords = {Standard ML, dynamic storage management, regions},
+}
