--- a/docs/report.tex
+++ b/docs/report.tex
@@ -18,14 +18,36 @@
 \definecolor{Lawngreen}{rgb}{0.48, 0.99, 0}
 \definecolor{LRed}{rgb}{1, 0.8, 0.8}
 \definecolor{GoldenRod}{rgb}{0.93, 0.65, 0.12}
-\usepackage[center]{titlesec}
+\usepackage{titlesec}
 \linespread{1.3}
 \usepackage{verbatimbox}
+%% draw nice frame around code fragments
+%% \newminted{haskell}{frame=lines,framerule=0.5pt}
 
+\definecolor{light-gray}{rgb}{0.9,0.9,0.9}
+\setminted{bgcolor=light-gray}  % this line causes the problem
+
+\makeatletter
+\patchcmd{\minted@colorbg}{\noindent}{\medskip\noindent}{}{}
+\apptocmd{\endminted@colorbg}{\par\medskip}{}{}
+\makeatother
+
+%% fix line spacing to 1.5
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{1em}
 
+%% nice title formatting
+\titleformat{\chapter}[display]
+    {\bfseries\huge}
+    {\filleft\Large\chaptertitlename~\thechapter}
+    {3ex}
+    {\titlerule\vspace{1.5ex}\filright}
+    [\vspace{1ex}\titlerule]
+
+%% doc starts here
 \begin{document}
+
+%% title page
 \begin{titlepage}
     \centering
     %% \includegraphics[width=0.15\textwidth]{example-image-1x1}\par\vspace{1cm}
@@ -82,8 +104,8 @@ environment with extensive error checking capabilities, the ability to check sou
 common programming errors (such as duplicate function definitions and unreachable functions) and
 produce images of program callgraphs. It has been designed with the principle aim of making an
 environment conducive to learning, without being condescending or overly simplistic. 
-
 \end{abstract}
+
 \chapter{Introduction}
 
 \begin{flushright} \textit{`a monad is a monoid in the category of endofunctors, what's
@@ -225,7 +247,7 @@ following list:
 
 To do this in an imperative manner, something like the following might be written:
 
-\begin{minted}{python}
+\begin{minted}{haskell}
     sum = 0
     for i in range(len(nums)):
         if nums[i] == 3:
@@ -248,12 +270,6 @@ imperative substructure, and the syntax reveals this. The equivalent function in
 
 \mint{haskell}|sum (filter (==3) nums)|
 
-Haskell provides some syntactic sugar to reduce the number of brackets even
-further\footnote{Apologies for the slightly misleading typography here, the package being used for
-syntax highlighting seems unable to properly interpret \LaTeX escape symbols. It should read simply
-\$.}
-
-\mint{haskell}|sum \$ filter (==3) nums|    
 To make all of this code more generic the Python needs to be wrapped in a function definition:
 
 \begin{minted}{python}
@@ -265,13 +281,9 @@ To make all of this code more generic the Python needs to be wrapped in a functi
         return sum
 \end{minted}
 
-And the equivalent in Haskell:
+And an even more generic equivalent in Haskell:
 
-\mint{haskell}|sumAllOccurrences n ns = sum \$ filter (==n) ns|
-
-In fact, we can do even better than this:
-
-\mint{haskell}|sumAllOccurrences p ns = sum \$ filter p ns|
+\mint{haskell}|sumAllOccurrences p ns = sum (filter p ns)|
 
 where p is any predicate we care to pass in, such as (==3) or (\textless2). The python code does not
 prevent someone from passing in junk values (leading to a runtime error) but the Haskell code, with
@@ -281,7 +293,7 @@ benefit from their program not crashing in unexpected and difficult to detect wa
 
 \begin{minted}{haskell}
     sumAllOccurrences :: (Int -> Bool) -> [Int] -> Int
-    sumAllOccurrences p ns = sum \$ filter p ns
+    sumAllOccurrences p ns = sum (filter p ns)
 \end{minted}
 
 This is more powerful than the equivalent Python for loop definition, and a great deal more
@@ -928,6 +940,18 @@ to increase program safety and security by then introducing elements of dependen
 appropriate. This incremental approach to static typing could encourage students to work with the
 type system rather than feel they are fighting it. Even a partially dependently-typed program could
 result in a number of possible compiler optimisations and greater runtime safety.
+
+
+%% check this list to make sure things have been cited
+\nocite{adams2012layout}
+\nocite{Appel:1997:MCI:248430}
+\nocite{groote}
+\nocite{rwh}
+\nocite{frob}
+\nocite{torc}
+\nocite{spj1}
+\nocite{spj2}
+\nocite{plp}
 
 \bibliography{bibliography}{}
 \bibliographystyle{plain}
