--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -1,3 +1,12 @@
+@book{Harper:2012:PFP:2431407,
+ author = {Harper, Professor Robert},
+ title = {Practical Foundations for Programming Languages},
+ year = {2012},
+ isbn = {1107029570, 9781107029576},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
 @book{Appel:1997:MCI:248430,
  author = {Appel, Andrew W.},
  title = {Modern Compiler Implementation in ML: Basic Techniques},
