--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -122,3 +122,63 @@
  address = {Hingham, MA, USA},
  keywords = {Standard ML, dynamic storage management, regions},
 }
+
+@incollection{Barendregt:1993:LCT:162552.162561,
+ author = {Barendregt, H. P.},
+ chapter = {Lambda Calculi with Types},
+ title = {Handbook of Logic in Computer Science (Vol. 2)},
+ editor = {Abramsky, S. and Gabbay, Dov M. and Maibaum, S. E.},
+ year = {1992},
+ isbn = {0-19-853761-1},
+ pages = {117--309},
+ numpages = {193},
+ url = {http://dl.acm.org/citation.cfm?id=162552.162561},
+ acmid = {162561},
+ publisher = {Oxford University Press, Inc.},
+ address = {New York, NY, USA},
+} 
+
+@book{Lipovaca:2011:LYH:2018642,
+ author = {Lipovaca, Miran},
+ title = {Learn You a Haskell for Great Good!: A Beginner's Guide},
+ year = {2011},
+ isbn = {1593272839, 9781593272838},
+ edition = {1st},
+ publisher = {No Starch Press},
+ address = {San Francisco, CA, USA},
+}
+
+@misc{scheme,
+    author= {Tang, Jonathan},
+    title= {Write yourself a Scheme in 48 hours},
+    url={https://en.wikibooks.org/wiki/Write_Yourself_a_Scheme_in_48_Hours}
+}
+
+@misc{diehl,
+    author = {Diehl, Stephen},
+    title = {Write you a Haskell},
+    url = {http://dev.stephendiehl.com/fun/},
+}
+
+@misc{algoW,
+    author = {Martin Grabmuller},
+    title = {Algorithm W},
+    url = {https://github.com/mgrabmueller/AlgorithmW/blob/master/AlgorithmW.lhs},
+}
+
+@misc{transformers,
+    author = {Martin Grabmuller},
+    title = {Transformers Step By Step},
+    url = {https://github.com/mgrabmueller/TransformersStepByStep},
+}
+
+
+
+
+<`0`>
+
+
+
+<`0`>
+
+
