--- a/docs/bibliography.bib
+++ b/docs/bibliography.bib
@@ -172,13 +172,20 @@
     url = {https://github.com/mgrabmueller/TransformersStepByStep},
 }
 
+@book{Pierce:2004:ATT:1076265,
+ author = {Pierce, Benjamin C.},
+ title = {Advanced Topics in Types and Programming Languages},
+ year = {2004},
+ isbn = {0262162288},
+ publisher = {The MIT Press},
+}
 
-
-
-<`0`>
-
-
-
-<`0`>
-
-
+@book{ 9780511608865,
+author = "J. Roger Hindley",
+title = {Basic Simple Type Theory}, 
+publisher = {Cambridge University Press}, 
+year = {1997},
+isbn = {9780511608865}, 
+note = {Cambridge Books Online}, 
+url = {http://dx.doi.org/10.1017/CBO9780511608865}
+}
